<resources>
    <string name="app_name">Pixlogy</string>
    <string name="pixlogy">PIXLOGY</string>
    <string name="ocr_scanner">OCR Scanner</string>
    <string name="image_stegnography">Image Stegnography</string>
    <string name="scan_search"><![CDATA[Scan & Search]]></string>
    <string name="barcode_qr_code_reader">Barcode/QR Code Reader</string>
    <string name="image_compressor">Image Compressor</string>
    <string name="pdf_convertor">PDF Convertor</string>
    <string name="sign_out">sign out</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="didn_t_receive_otp_code_resend">Didn\'t receive OTP code? Resend</string>
    <string name="please_enter_the_otp_code_sent_to_your_mobile_number">Please enter the OTP code sent to your mobile number</string>
    <string name="enter_number">Enter Number</string>
    <string name="ocr_scanner2">OCR SCANNER</string>
</resources>