<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme"
    tools:context=".ui.home.HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/gname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:letterSpacing="0.35"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/doppio_one"
                android:textStyle="bold"
                android:text="@string/pixlogy"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/profileBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile_btn"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                tools:ignore="RtlHardcoded" />


        </androidx.appcompat.widget.Toolbar>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ocrScannerBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/home_activity_layouts">

                <ImageView
                    android:id="@+id/ocrimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ocr_scan" />

                <TextView
                    android:id="@+id/ocrText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/ocrimg"
                    android:fontFamily="@font/doppio_one"
                    android:text="@string/ocr_scanner"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ocrText"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/ocrimg"
                    android:fontFamily="@font/doppio_one"
                    android:text="Search and Extract texts from images with OCR"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/imgStegnographyBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/home_activity_layouts">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/stegnography" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img2"
                    android:fontFamily="@font/doppio_one"
                    android:text="@string/image_stegnography"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text2"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/img2"
                    android:fontFamily="@font/doppio_one"
                    android:text="Encrypt or Decrypt any private text information inside an image"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/qrCodeReaderBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/home_activity_layouts">

                <ImageView
                    android:id="@+id/qrimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/qr_scan" />

                <TextView
                    android:id="@+id/qrText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="6dp"
                    android:layout_toEndOf="@+id/qrimg"
                    android:fontFamily="@font/doppio_one"
                    android:text="@string/barcode_qr_code_reader"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <!--        <TextView-->
                <!--            android:layout_width="230dp"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:layout_below="@+id/qrText"-->
                <!--            android:layout_marginStart="15dp"-->
                <!--            android:layout_toEndOf="@+id/qrimg"-->
                <!--            android:fontFamily="@font/doppio_one"-->
                <!--            android:text="Search and Extract texts from images with OCR"-->
                <!--            android:textColor="@color/black"-->
                <!--            android:textSize="10dp" />-->

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/imageCompressorBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/home_activity_layouts">

                <ImageView
                    android:id="@+id/compressImg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/img_compress" />

                <TextView
                    android:id="@+id/compressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/compressImg"
                    android:fontFamily="@font/doppio_one"
                    android:text="@string/image_compressor"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/compressText"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/compressImg"
                    android:fontFamily="@font/doppio_one"
                    android:text="You can reduce the size of any image according to your preferences"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/imgToPdfBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/home_activity_layouts">

                <ImageView
                    android:id="@+id/pdfimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/img_to_pdf" />

                <TextView
                    android:id="@+id/pdftext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/pdfimg"
                    android:fontFamily="@font/doppio_one"
                    android:text="@string/pdf_convertor"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pdftext"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/pdfimg"
                    android:fontFamily="@font/doppio_one"
                    android:text="Organize your images and reduce their size by converting them to PDF files"
                    android:textColor="@color/black"
                    android:textSize="10sp" />






            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/lens_Scan_searchBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/home_activity_layouts">

                <ImageView
                    android:id="@+id/lens"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/lens" />

                <TextView
                    android:id="@+id/lensText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/lens"
                    android:fontFamily="@font/doppio_one"
                    android:text="@string/scan_search"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lensText"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/lens"
                    android:fontFamily="@font/doppio_one"
                    android:text="Scan any image and search about it on web"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/theme2"
                android:text="@string/sign_out"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginHorizontal="40dp"
                android:textColor="@color/white"
                app:cornerRadius="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>